--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app"
+    "start": "node app",
+    "heroku-postbuild": "node demo_create_table.js"
   },
   "description": "School Manager",
   "author": {
